--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.sign-up{
+    @apply border px-4 py-2 rounded-md border-black hover:bg-green-500 hover:text-white hover:border-green-500
+}
