--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,6 @@
 .sign-up{
     @apply border px-4 py-2 rounded-md border-black hover:bg-green-500 hover:text-white hover:border-green-500
 }
+.input-style {
+    @apply p-2 border-b-2 border-gray-400 outline-green-500
+}
